# Text-2-Beluga-Discord-Bot

./: .gitignore  .replit  package-lock.json  package.json  pyproject.toml  replit.nix
src/: index.js
src/code/: chat.txt  compile_video.py  generate_chat.py
src/commands/: actions.js  characters.js  feedback.js  generate.js  help.js  invite.js
src/data/chars/: enmap.sqlite
src/data/log/: enmap.sqlite  enmap.sqlite-shm  enmap.sqlite-wal
src/events/: interactionCreate.js  ready.js
src/functions/: deploy-commands.js  pagination-two.js  pagination.js
